[package]
name = "symcrypt"
authors = ["nnmkhang"]
version = "0.4.0"
license = "MIT OR Apache-2.0"
description = "Friendly and Idiomatic Wrappers for SymCrypt"
edition = "2021"
homepage = "https://github.com/microsoft/SymCrypt"
repository = "https://github.com/microsoft/rust-symcrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# uses '../symcrypt-sys' when compiled locally, and uses
# crates.io versioning when published
symcrypt-sys = {path = "../symcrypt-sys", version = "0.3.0"}
libc = "0.2.0"
lazy_static = "1.4.0"

[features]
default = []
md5 = []
sha1 = []
pkcs1-encrypt-decrypt = []

[dev-dependencies]
hex = "0.4.3"
