[package]
name = "symcrypt-bindgen"
authors = ["nnmkhang"]
version = "0.1.0"
description = "Bindings generation for symcrypt-sys"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"
cc = { version = "1.0", features = ["parallel"] }
