[package]
name = "symcrypt-sys"
authors = ["Microsoft"]
version = "0.2.0"
license = "MIT OR Apache-2.0"
description = "Rust/C Bindings for SymCrypt"
edition = "2021"
build = "build.rs"
homepage = "https://github.com/microsoft/SymCrypt"
repository = "https://github.com/microsoft/rust-symcrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
lazy_static = "1.4.0"
ctor = "0.2.8"

[build-dependencies]
cmake = "0.1.51"
bindgen = "0.65.1"
cc = { version = "1.0", features = ["parallel"] }

[features]
default = ["static"]
dynamic = []
static = [] 
